# TaskWeaver

./: CHANGELOG.md  CMakeLists.txt  ClangFormat.cmake  LICENSE  README.MD  conanfile.py
cmake/: TaskWeaverConfig.cmake.in
src/: common.h  executor.cpp  executor.h  task.cpp  task.h  taskManager.cpp  taskManager.h  taskPool.cpp  taskPool.h  taskStealingDeque.h  utility.h
tests/: CMakeLists.txt  taskManagerTest.cpp  taskManagerTest.h  taskStealingDequeTest.cpp  taskStealingDequeTest.h
